[gd_scene load_steps=10 format=3 uid="uid://428rcfeerska"]

[ext_resource type="Script" path="res://NewScript.cs" id="1_wbcdy"]
[ext_resource type="Texture2D" uid="uid://cvkn6cccxvd84" path="res://icon.svg" id="2_n362s"]
[ext_resource type="Script" path="res://scripts/health.gd" id="3_vg0f1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6f5mk"]
bg_color = Color(1, 0.00602727, 0.275673, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kuxnb"]
bg_color = Color(0.161325, 0.513217, 0.614666, 1)

[sub_resource type="Theme" id="Theme_nikaj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eei4c"]
bg_color = Color(0.297691, 0.639874, 0.832912, 1)

[sub_resource type="Theme" id="Theme_e1f8q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ynn4"]
bg_color = Color(1, 0.157016, 0.0262209, 1)

[node name="HealthScene" type="Node2D"]
position = Vector2(576, 275)
script = ExtResource("1_wbcdy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_n362s")
script = ExtResource("3_vg0f1")

[node name="HealthBar" type="ProgressBar" parent="Sprite2D"]
offset_left = -122.0
offset_top = -130.0
offset_right = 118.0
offset_bottom = -103.0
theme_override_styles/background = SubResource("StyleBoxFlat_6f5mk")
theme_override_styles/fill = SubResource("StyleBoxFlat_kuxnb")
max_value = 10.0
value = 10.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AddButton" type="Button" parent="Sprite2D/HealthBar"]
offset_left = -71.0
offset_top = 211.0
offset_right = 45.0
offset_bottom = 258.0
theme = SubResource("Theme_nikaj")
theme_type_variation = &"FlatButton"
theme_override_styles/normal = SubResource("StyleBoxFlat_eei4c")
text = "Add air"

[node name="SubsButton" type="Button" parent="Sprite2D/HealthBar"]
offset_left = 180.0
offset_top = 208.0
offset_right = 304.0
offset_bottom = 260.0
theme = SubResource("Theme_e1f8q")
theme_override_styles/normal = SubResource("StyleBoxFlat_5ynn4")
text = "remove air
"

[node name="Timer" type="Timer" parent="Sprite2D/HealthBar"]

[connection signal="pressed" from="Sprite2D/HealthBar/AddButton" to="Sprite2D" method="_on_add_button_pressed"]
[connection signal="pressed" from="Sprite2D/HealthBar/SubsButton" to="Sprite2D" method="_on_subs_button_pressed"]
[connection signal="timeout" from="Sprite2D/HealthBar/Timer" to="Sprite2D" method="_on_timer_timeout"]
